--- a/src/3-Work/work.css
+++ b/src/3-Work/work.css
@@ -47,7 +47,7 @@
 .port-description span {
     display: inline-block;
     opacity: 0;
-    filter: blur(1.5px);
+    filter: blur(2px);
     padding-right: 1px;
 } 
 .port-description span:nth-child(1) {animation: descFadeIn 0.8s .7s forwards cubic-bezier(0.11, 0, 0.5, 0)}
@@ -189,6 +189,7 @@
     text-align: center;
     background-color: rgba(0, 0, 0, .35);
     height: 100%;
+    width: 100%;
     padding: 0 1rem;
     border-radius: 0 .5rem .5rem 0;
 }
@@ -347,4 +348,148 @@
     color: #08fdd8;
     text-decoration: underline;
     cursor: pointer;
+}
+@media (max-width: 1400px) {
+    .other-items {
+        grid-template-rows: auto auto auto auto;
+        grid-template-columns: auto auto auto;
+    }
+}
+@media (max-width: 1250px) {
+    .work-container {
+        padding: 3.5rem 0 3.5rem 15rem;
+    }
+    .port-items {
+        width: 93.5%;
+        margin-right: -1rem;
+    }
+    .port-title {
+        font-size: 3.5rem;
+    }
+}
+@media (max-width: 1100px) {
+    .work-container {
+        padding: 3.5rem 0 3.5rem 0;
+    }
+}
+@media (max-width: 950px) {
+    .work-container {
+        padding: 2rem 0 2rem 0;
+    }
+    .other-items {
+        grid-template-rows: auto auto auto auto auto;
+        grid-template-columns: auto auto;
+    }
+    .port-title {
+        font-size: 3.25rem;
+    }
+    .port-header {
+        font-size: 5.25rem;
+    }
+    .other-header {
+        font-size: 5rem;
+    }
+    .port-items {
+        width: 95%;
+        gap: 2.5rem;
+    }
+    .port-item {
+        flex-direction: column;
+        height: 40rem;
+        width: 100%;
+        background-color: rgba(0, 0, 0, .35);
+    }
+    @keyframes portAnimBox {
+        100% {width: 35rem}
+    }
+    @keyframes portAnimWrap {
+        80% {opacity: 0}
+        100% {width: 35rem; opacity: 1}
+    }
+    .portGifPopup {
+        display: none;
+    }
+    .port-headline {
+        font-size: 1.75rem;
+        line-height: 1;
+        padding: 1.5rem 0;
+    }
+    .port-title-site {
+        padding-top: .25rem;
+    }
+    .port-description {
+        padding: 0 2rem;
+        line-height: 1.35;
+        text-align: center;
+    }
+    .port-text-box {
+        height: 100%;
+        width: 100%;
+        padding: 0 1rem;
+        background-color: transparent;
+    }
+    .port-gif-box {
+        height: 20rem;
+    }
+    .port-gif-wrapper {
+        height: 20rem;
+    }
+    .port-gif {
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 1 !important;
+    }
+    .port-gif-logo {
+        display: none;
+    }
+}
+@media (max-width: 800px) {
+    .ending-work-this-wrapper {
+        padding: 0 2.5rem;
+        margin-top: 3.5rem;
+        text-align: center;
+    }
+    .ending-work-this span:first-of-type {
+        left: -1.75rem;
+    }
+}
+@media (max-width: 700px) {
+    .other-description {
+        margin-top: 2rem;
+        text-align: center;
+        padding: 0 1rem;
+    }
+    .other-items {
+        grid-template-rows: auto auto auto auto auto auto;
+        grid-template-columns: auto;
+        margin-top: 3rem;
+    }
+}
+@media (max-width: 480px) {
+    .port-header {
+        font-size: 4.5rem;
+    }
+    .other-header {
+        font-size: 4.35rem;
+    }
+    .port-description {
+        padding: 0 1rem;
+    }
+    .port-wrapper {
+        margin-left: -.75rem;
+    }
+    .port-item {
+        height: 42.5rem;
+    }
+    .port-title {
+        font-size: 3rem;
+    }
+    .port-headline {
+        font-size: 1.65rem;
+        line-height: 1.2;
+    }
+    .ending-work-this span:first-of-type {
+        display: none;
+    }
 }
