--- a/src/3-Work/Modal/modal.css
+++ b/src/3-Work/Modal/modal.css
@@ -56,8 +56,7 @@
     font-weight: 800;
     width: fit-content;
     text-align: center;
-    line-height: 3rem;
-    margin-bottom: -1rem;
+    line-height: 2.65rem;
     margin-top: 1rem;
 }
 .modal-video-title span:first-of-type {
@@ -75,24 +74,16 @@
     font-size: 3.25rem;
 }
 .iframe-wrapper {
-    position: relative;
-    width: 90%;
-    overflow: hidden;
-    padding-top: 56.25%;
+    width: 50rem;
 }
 .iframe-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
     width: 100%;
-    height: 100%;
+    height: 32.5rem;
     border-radius: .5rem;
 }
 .modal-tech-wrapper {
     background-color: #373737;
-    width: 90%;
+    width: 50rem;
     padding: 1rem 2rem 1.25rem;
     border-radius: .5rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
@@ -141,12 +132,12 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 3.5rem;
 }
 .modal-title-wrapper {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    margin-top: 3rem;
 }
 .modal-title-wrapper img {
     height: 5.25rem;
@@ -200,16 +191,16 @@
 }
 .modal-body {
     align-self: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2.5rem;
     width: 90%;
-    margin-bottom: -2.25rem;
 }
 .modal-description {
     font-size: 1.8rem;
     line-height: 2.85rem;
-    padding-bottom: 1.5rem;
-    margin-top: -1rem;
+    height: 38.5%;
     margin-bottom: 1rem;
-    height: 45%;
 }
 .modal-features-header {
     font-size: 2rem;
@@ -223,7 +214,6 @@
 }
 .modal-features {
     padding: 1rem 0 2rem;
-    margin: 0 auto;
     border-bottom: 1px solid gray;
     padding-left: 5rem;
 }
@@ -234,11 +224,11 @@
 }
 .modal-visit-site {
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 2.5rem;
-    margin-top: -2.5rem;
+    height: 10rem;
 }
 .modal-visit-btn {
     position: relative;	
@@ -285,4 +275,29 @@
 .modal-visit-btn:hover:before,
 .modal-visit-btn:hover:after {
 	width: 100%;
+}
+@media (min-height: 875px) {
+    .modal-description {
+        font-size: 2rem;
+        line-height: 2.85rem;
+        margin-bottom: 2rem;
+    }
+}
+@media (min-height: 875px) {
+    .modal-description {
+        font-size: 2rem;
+        line-height: 2.85rem;
+        margin-bottom: 2rem;
+    }
+}
+@media (min-height: 900px) {
+    .modal-description {
+        line-height: 3rem;
+        margin-bottom: 2.5rem;
+    }
+}
+@media (min-height: 950px) {
+    .modal-description {
+        margin-bottom: 3rem;
+    }
 }
