--- a/src/5-Blogs/blogs.css
+++ b/src/5-Blogs/blogs.css
@@ -33,8 +33,6 @@
 @keyframes blogDesc {
     100% {opacity: 1}
 }
-
-
 .blog-wrapper {
     margin-top: 2.5rem;
     width: 90%;
@@ -146,7 +144,6 @@
     cursor: pointer;
     color: #242424;
 }
-
 .blog-facts {
     position: relative;
     background-color: #252525;
@@ -189,4 +186,205 @@
 .blog-likes img {
     height: 3.5rem;
     padding-right: .5rem;
+}
+
+/* RESPONSIVE */
+@media (max-width: 1400px) {
+    .blogs-container {
+        padding: 5rem 0 3.5rem 18.5rem;
+    }
+    .blog-card {
+        width: 65rem;
+    }
+    .blog-image {
+        height: 22.5rem;
+    }
+    .blog-start {
+        font-size: 1.6rem;
+    }
+}
+@media (max-width: 1250px) {
+    .blogs-container {
+        padding: 7.5rem 0 3.5rem 16.5rem;
+    }
+    .blog-card {
+        width: 57.5rem;
+    }
+    .blog-image {
+        height: 20rem;
+    }
+    .blog-text-content {
+        height: 18.5rem;
+    }
+    .blog-start b {
+        margin-top: .125rem;
+        margin-bottom: -.5rem;
+        line-height: 2rem;
+    }
+    #blogStartResponsive {
+        display: none;
+    }
+}
+@media (max-width: 1100px) {
+    .blogs-container {
+        padding: 7.5rem 0 3.5rem 0;
+    }
+    .blog-title {
+        font-size: 2.75rem;
+        padding: .35rem 0 .75rem;
+    }
+}
+@media (max-width: 950px) {
+    .blogs-container {
+        padding: 5rem 0 3.5rem 0;
+    }
+    .blog-card {
+        width: 50rem;
+    }
+    .blog-image {
+        height: 16.5rem;
+    }
+    .blog-start {
+        font-size: 1.4rem;
+    }
+    .blog-start a {
+        font-size: 1.65rem;
+    }
+    .blog-date {
+        left: 2.5rem;
+    }
+    .blog-likes {
+        right: 3.5rem;
+    }
+}
+@media (max-width: 850px) {
+    .blog-title {
+        font-size: 2.5rem;
+        padding: .125rem 0 .75rem;
+        margin-left: -.75rem;
+    }
+    .blog-header {
+        font-size: 5rem;
+    }
+    .blog-description {
+        margin-top: 2.25rem;
+        font-size: 1.65rem;
+    }
+    .blogs-container {
+        padding: 5rem 0 3.5rem 0;
+    }
+    .blog-card {
+        width: 40rem;
+    }
+    .blog-cards {
+        margin-top: -1rem;
+    }
+    #blog-item-1:checked ~ .blog-cards #blog-slide-3, #blog-item-2:checked ~ .blog-cards #blog-slide-1, #blog-item-3:checked ~ .blog-cards #blog-slide-2 {
+        transform: translatex(-30%) scale(0.8);
+    }
+    #blog-item-1:checked ~ .blog-cards #blog-slide-2, #blog-item-2:checked ~ .blog-cards #blog-slide-3, #blog-item-3:checked ~ .blog-cards #blog-slide-1 {
+        transform: translatex(30%) scale(0.8);
+    }
+    .blog-text-content {
+        height: 19.5rem;
+    }
+    .blog-image {
+        height: 15rem;
+    }
+    .blog-start {
+        font-size: 1.25rem;
+    }
+    .blog-start a {
+        font-size: 1.5rem;
+    }
+    .blog-start-wrap {
+        padding: 0 1.5rem;
+    }
+    .blog-date {
+        left: 2rem;
+        font-size: 1.35rem;
+    }
+    .blog-read {
+        font-size: 1.5rem;
+    }
+    .blog-likes {
+        right: 2.5rem;
+        font-size: 1.65rem;
+    }
+    .blog-likes img {
+        height: 2.65rem;
+        padding-right: .25rem;
+    }
+    .blog-facts {
+        height: 5rem;
+    }
+}
+@media (max-width: 650px) {
+    .blogs-container {
+        padding: 2rem 0 2rem 0;
+    }
+    .blog-title {
+        font-size: 1.85rem;
+        padding: .125rem 0 .75rem;
+        margin-left: .25rem;
+    }
+    .blog-header {
+        font-size: 4.5rem;
+    }
+    .blog-description {
+        margin-top: 2.25rem;
+        font-size: 1.5rem;
+        padding: 0 2rem;
+        text-align: center;
+    }
+    .blog-card {
+        width: 25rem;
+    }
+    .blog-cards {
+        margin-top: 1rem;
+    }
+    .blog-text-content {
+        height: 20.5rem;
+        padding: 1rem .25rem;
+    }
+    .blog-image {
+        height: 13.5rem;
+    }
+    .blog-start {
+        font-size: 1.25rem;
+        line-height: 1.35;
+    }
+    .blog-start a {
+        font-size: 1.375rem;
+    }
+    .blog-start-wrap {
+        padding: 0 .75rem;
+        margin-left: -.25rem;
+        width: calc(100% + .5rem);
+    }
+    .blog-start b {
+        margin-top: .65rem;
+    }
+    .blog-start i {
+        font-size: 1.2rem;
+        line-height: 1;
+    }
+    .blog-date {
+        left: 1rem;
+        font-size: 1rem;
+    }
+    .blog-read {
+        font-size: 1.2rem;
+    }
+    .blog-likes {
+        right: 1.5rem;
+        font-size: 1.4rem;
+    }
+    .blog-likes img {
+        height: 2.2rem;
+        padding-right: .15rem;
+    }
+    .blog-facts {
+        height: 5rem;
+    }
 }
